# taskforce

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs
.claude/: settings.json
.codex/: hooks.json
.codex/hooks/: stop-checks.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: index.css  index.js  task_detail.css  task_detail.js
community/plugins/git/: manifest.toml
community/plugins/git/locale/ja/LC_MESSAGES/: git.po
community/plugins/github-issue/: manifest.toml
community/plugins/github-issue/locale/ja/LC_MESSAGES/: github-issue.mo  github-issue.po
community/plugins/github-pr/: manifest.toml
community/plugins/github-pr/locale/ja/LC_MESSAGES/: github-pr.mo  github-pr.po
community/plugins/github-repo/: manifest.toml
community/plugins/github-repo/locale/ja/LC_MESSAGES/: github-repo.mo  github-repo.po
config/: config.toml.sample  taskforce.env.sample
config/systemd/: taskforce-debug.service  taskforce-development-debug.service  taskforce.service
docs/: task-model.md
examples/plugins/chatwork/: import.rs  intake.rs  manifest.toml  mod.rs
examples/plugins/chatwork/locale/ja/LC_MESSAGES/: chatwork.mo  chatwork.po
examples/plugins/chatwork/renderers/: chatwork-render-blocks.js  chatwork-subsequent-messages.js
examples/plugins/git/: manifest.toml
examples/plugins/git/locale/ja/LC_MESSAGES/: git.mo  git.po
examples/plugins/github-issue/: manifest.toml
examples/plugins/github-issue/locale/ja/LC_MESSAGES/: github-issue.po
examples/plugins/github-pr/: manifest.toml
examples/plugins/github-pr/locale/ja/LC_MESSAGES/: github-pr.mo  github-pr.po
examples/plugins/github-repo/: manifest.toml
examples/plugins/github-repo/locale/ja/LC_MESSAGES/: github-repo.mo  github-repo.po
locale/ja/LC_MESSAGES/: taskforce.mo  taskforce.po
scripts/dev/: seed_dummy_tasks.py
scripts/dev/seed_helper/: Cargo.toml
scripts/dev/seed_helper/src/: main.rs
scripts/i18n/: build.sh
src/: app.rs  backend.rs  cli.rs  config.rs  db_backend.rs  dto.rs  i18n.rs  intake.rs  lib.rs  local_backend.rs  main.rs  plugin.rs  postgres_backend.rs  search.rs  taskwarrior.rs  web.rs
