[package]
name = "taskforce"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.9", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
gettext = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
toml = "0.9.8"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
