# Copyright (c) 2026- Masaki Ishii
# Copyright (c) 2026- Small Gear Lab
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "taskforce"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
gettext = "0.4.0"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlparser = "0.62.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.14.0"
toml = "1.1.2"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
