# Copyright (c) 2026- Masaki Ishii
# Copyright (c) 2026- Small Gear Lab
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "taskforce-seed-helper"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
serde_json = "1.0.145"
taskforce = { path = "../../.." }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
webpki-roots = "1.0.4"
